# theharness

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  HANDOFF.md  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  TASK.md  demo.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
tests/: test_agent_loop.py  test_classifier.py  test_cli.py  test_config.py  test_credential_manager.py  test_demo.py  test_guardrail.py  test_injector.py  test_memory_store.py  test_mock_provider.py  test_models.py  test_tool_dispatcher.py  test_validator.py  test_webui.py
the_harness/: __init__.py  agent_loop.py  cli.py  config.py  models.py
the_harness/credentials/: __init__.py  manager.py
the_harness/feedback/: __init__.py  classifier.py  injector.py  validator.py
the_harness/guardrail/: __init__.py  guardrail.py
the_harness/llm/: __init__.py  base.py  mock_provider.py  openai_provider.py
the_harness/memory/: __init__.py  store.py
the_harness/tools/: __init__.py  dispatcher.py
the_harness/webui/: __init__.py  app.py
the_harness/webui/static/: app.js  index.html  style.css
